refactor proto API definitions
